# fractsure

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  docker-smoke.yml
api/: Dockerfile  main.py  requirements.txt
data/: README.md
data/raw/: hbfmid.dvc
frontend/: .dockerignore  Dockerfile  README.md  app.py  index.html  nginx.conf  package-lock.json  package.json  requirements.txt  vite.config.js
frontend/src/: App.jsx  config.js
frontend/src/api/: fractureApi.js
frontend/src/components/: FileDropzone.jsx  PredictionViewer.jsx  ResultPanel.jsx
frontend/src/styles/: app.css  global.css
training/: config.yaml  export.py  train.py  tune.py
