[project]
name = "fractsure"
version = "0.1.0"
description = "Monorepo scaffold for fracture detection MLOps pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"dvc[gs]>=3.0.0",
	"fastapi>=0.116.0",
	"mlflow>=2.20.0",
	"numpy>=2.4.4",
	"onnxruntime>=1.20.0",
	"pandas>=2.3.3",
	"pillow>=10.4.0",
	"python-multipart>=0.0.9",
	"pyyaml>=6.0.2",
	"ray[tune]>=2.40.0",
	"requests>=2.32.0",
	"streamlit>=1.42.0",
	"ultralytics>=8.3.0",
	"uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
	"pytest>=8.3.0",
	"ruff>=0.11.0",
]
